--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bytedance/danmu.git"
+    "url": "https://github.com/chen-y/dmu-dance.git"
   }
 }
